Bug 706227 - Add way for JS_GC API users to give detailed reason for invocation (r=mccr8)